--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
             <div class="human-score">You = 0</div>
         </div>
 
+        <div class="footer">
+            @ Gianella Cravioto
+        </div>
+
     </body>
 </html>
