--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <div class="header">Rock, Paper, Scissors</div>
 
-        <div class="instruction">What will you choose?</div>
+        <div class="instruction">Best out of 5!</div>
 
         <div class="buttons">
             <button id="rock">🪨</button>
